[gd_scene load_steps=2 format=3 uid="uid://djvy1egbdn3xd"]

[ext_resource type="Script" uid="uid://lk15jrv3ht3t" path="res://lib/user_dbtool/filesek.gd" id="1_2ihg1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ihg1")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(0, 36)
ok_button_text = "Select"
file_mode = 2
access = 2

[node name="open" type="Button" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 4.0
offset_right = 314.0
offset_bottom = 35.0
text = "open"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 192.0
offset_bottom = 31.0
placeholder_text = "cifre"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 146.0
offset_right = 652.0
offset_bottom = 162.0
min_value = 1000.0
max_value = 1e+06
step = 100.0
value = 1000.0
rounded = true

[node name="Label" type="Label" parent="HSlider"]
layout_mode = 0
offset_left = 179.0
offset_top = 15.0
offset_right = 219.0
offset_bottom = 38.0
text = "1000.0"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 49.0
offset_right = 56.0
offset_bottom = 73.0

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="open" to="." method="_on_open_pressed"]
[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="HSlider" to="." method="_on_h_slider_drag_started"]
